quarkus-datagrid/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-datagrid
  labels:
    app: quarkus-datagrid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-datagrid
  template:
    metadata:
      labels:
        app: quarkus-datagrid
      annotations:
        kubernetes.io/change-cause: ${CAUSE}
        gitcommit: ${CAUSE}
    spec:
      containers:
        - name: quarkus-datagrid
          image: ${IMAGE}
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
