quarkus-datagrid/k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-datagrid
  labels:
    app: quarkus-datagrid
spec:
  to:
    kind: Service
    name: quarkus-datagrid
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
